# chimera

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/postgres/: init.sql
e2e/: README.md
fixtures/: README.md
src/chimera/: __main__.py  cli.py  cli_db.py  mcp_server.py
tests/: conftest.py
tests/deobf_evidence/: _assertions.py  _fixtures.py  _registry.py  conftest.py  test_bypass_evidence.py  test_core_adapter_evidence.py  test_coverage_matrix.py  test_cross_platform_evidence.py  test_missing_tools_evidence.py
tests/fixtures/: sample_entitlements.xml  sample_manifest.xml
tests/integration/: conftest.py  test_database_pg.py  test_ghidra_adapter.py  test_jadx_adapter.py  test_objc_callsite_extraction_e2e.py  test_objc_xref_real_sample.py  test_radare2_adapter.py  test_rn_real_samples.py  test_sqlite_import.py  test_swift_real_sample.py
tests/unit/: _macho_builder.py  test_adapter_base.py  test_afl_adapter.py  test_api_server.py  test_arm64_register_track.py  test_binary.py  test_cache.py  test_capa_adapter.py  test_class_dump_adapter.py  test_code_capture.py  test_config.py  test_database.py  test_detector.py  test_device_android.py  test_device_ios.py  test_engine.py  test_finding.py  test_firebase_analyzer.py  test_flutter.py  test_framework_detector.py  test_frida_adapter.py  test_hermes_dec_adapter.py  test_ios_plist_rules.py  test_jadx_adapter.py  test_macho_builder.py  test_macho_objc_parser.py  test_macho_objc_structs.py  (+37 more)
web/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+172 files in other folders)
