[project]
name = "chimera"
version = "0.1.0"
description = "Mobile reverse engineering platform — many backends, one beast"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "r2pipe>=1.8",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "textual>=0.89",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "testcontainers[postgres]>=4.0",
]

[project.scripts]
chimera = "chimera.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chimera"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
